tests/files/type_checker_tests/should_fail/097.cmdr
//Should fail if negate operation on something not an int/float
x = -"hi";
